Fixes JDK 9 build